{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 762,
  "lineage": "cef0538b-f9c6-dc6e-0d35-3605dfe153e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain-prod-all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:security-group/sg-04768149f35756aae",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04768149f35756aae",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/24",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain-prod-all_worker_management20210707212021975600000007",
            "name_prefix": "blockchain-prod-all_worker_management",
            "owner_id": "844410341491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.suffix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain_prod_worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:security-group/sg-05f91d931e46a61b4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05f91d931e46a61b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain_prod_worker_group_mgmt_one20210707212025898900000008",
            "name_prefix": "blockchain_prod_worker_group_mgmt_one",
            "owner_id": "844410341491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain_prod_worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:security-group/sg-0adfdd81c50b0a1e2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0adfdd81c50b0a1e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain_prod_worker_group_mgmt_two20210707212026117700000009",
            "name_prefix": "blockchain_prod_worker_group_mgmt_two",
            "owner_id": "844410341491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:security-group/sg-0b4913a2d6eafbdba",
            "description": "subnet where redis will live",
            "egress": [],
            "id": "sg-0b4913a2d6eafbdba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.10.0.0/24",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "blockchain-prod-redis-security-group",
            "name_prefix": "",
            "owner_id": "844410341491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-0c1c85d618f379f25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.7.0/24",
            "id": "subnet-0c1c85d618f379f25",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844410341491",
            "tags": {
              "Environment": "blockchain-prod-redis-public"
            },
            "tags_all": {
              "Environment": "blockchain-prod-redis-public"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:security-group/sg-0d9601cd0815ac792",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9601cd0815ac792",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0248392c78a36c05e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "blockchain-prod-eks-HczIGKWg2021070721203061750000000a",
            "name_prefix": "blockchain-prod-eks-HczIGKWg",
            "owner_id": "844410341491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-HczIGKWg-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-HczIGKWg-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:security-group/sg-0248392c78a36c05e",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0248392c78a36c05e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9601cd0815ac792"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9601cd0815ac792"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "blockchain-prod-eks-HczIGKWg2021070721203169140000000b",
            "name_prefix": "blockchain-prod-eks-HczIGKWg",
            "owner_id": "844410341491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-HczIGKWg-eks_worker_sg",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "owned"
            },
            "tags_all": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-HczIGKWg-eks_worker_sg",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-739451224",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d9601cd0815ac792",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.suffix",
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3381767476",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d9601cd0815ac792",
            "self": false,
            "source_security_group_id": "sg-0248392c78a36c05e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1019219599",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0248392c78a36c05e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2345146563",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0248392c78a36c05e",
            "self": false,
            "source_security_group_id": "sg-0d9601cd0815ac792",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2572831666",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0248392c78a36c05e",
            "self": false,
            "source_security_group_id": "sg-0d9601cd0815ac792",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3298536360",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0248392c78a36c05e",
            "self": false,
            "source_security_group_id": "sg-0248392c78a36c05e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-057d7171433741470",
            "domain": "vpc",
            "id": "eipalloc-ed60d6e7",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0b8842cbb0196469e",
            "private_dns": "ip-10-10-4-71.us-west-1.compute.internal",
            "private_ip": "10.10.4.71",
            "public_dns": "ec2-54-176-149-213.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.149.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blockchain-prod-vpc-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:internet-gateway/igw-06acef3d64d07f58b",
            "id": "igw-06acef3d64d07f58b",
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "random_string.suffix",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-ed60d6e7",
            "connectivity_type": "public",
            "id": "nat-0ecb8769a355775b6",
            "network_interface_id": "eni-0b8842cbb0196469e",
            "private_ip": "10.10.4.71",
            "public_ip": "54.176.149.213",
            "subnet_id": "subnet-0aca197caee290d2f",
            "tags": {
              "Name": "blockchain-prod-vpc-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00285e45c62c9ce071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ecb8769a355775b6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00285e45c62c9ce07",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06acef3d64d07f58b",
            "id": "r-rtb-0991e153cad35d1d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0991e153cad35d1d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:route-table/rtb-00285e45c62c9ce07",
            "id": "rtb-00285e45c62c9ce07",
            "owner_id": "844410341491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecb8769a355775b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blockchain-prod-vpc-private",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:route-table/rtb-0991e153cad35d1d9",
            "id": "rtb-0991e153cad35d1d9",
            "owner_id": "844410341491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06acef3d64d07f58b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blockchain-prod-vpc-public",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d58f073b8f138b",
            "route_table_id": "rtb-00285e45c62c9ce07",
            "subnet_id": "subnet-01745d365ab6f3baf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d74ed01efacc0ab",
            "route_table_id": "rtb-00285e45c62c9ce07",
            "subnet_id": "subnet-041bd8e88f9de26cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05845b7995bbd0465",
            "route_table_id": "rtb-00285e45c62c9ce07",
            "subnet_id": "subnet-095dd97f6aa5be269"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94264a77c18d62b",
            "route_table_id": "rtb-0991e153cad35d1d9",
            "subnet_id": "subnet-0aca197caee290d2f"
          },
          "dependencies": [
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec6cca1e6213ca6",
            "route_table_id": "rtb-0991e153cad35d1d9",
            "subnet_id": "subnet-08bf5b08674f4aeeb"
          },
          "dependencies": [
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b48a7c414a090a",
            "route_table_id": "rtb-0991e153cad35d1d9",
            "subnet_id": "subnet-0ae18b1776bdd7dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-01745d365ab6f3baf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-01745d365ab6f3baf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc-private-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-041bd8e88f9de26cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-041bd8e88f9de26cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc-private-us-west-1c",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private-us-west-1c",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-095dd97f6aa5be269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-095dd97f6aa5be269",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc-private-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-0aca197caee290d2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0aca197caee290d2f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc-public-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-08bf5b08674f4aeeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.5.0/24",
            "id": "subnet-08bf5b08674f4aeeb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc-public-us-west-1c",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public-us-west-1c",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:subnet/subnet-0ae18b1776bdd7dad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.6.0/24",
            "id": "subnet-0ae18b1776bdd7dad",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc-public-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e4c8cdf09a60fe9"
          },
          "dependencies": [
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:844410341491:vpc/vpc-04e4c8cdf09a60fe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02dab18e1759a9275",
            "default_route_table_id": "rtb-0aeb07664aed39801",
            "default_security_group_id": "sg-074535be5392f6ac3",
            "dhcp_options_id": "dopt-10e50c76",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04e4c8cdf09a60fe9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aeb07664aed39801",
            "owner_id": "844410341491",
            "tags": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-HczIGKWg": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}